kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiapeats-ms-pedido-deployment
  labels:
    app: fiapeats-ms-pedido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiapeats-ms-pedido
  template:
    metadata:
      labels:
        app: fiapeats-ms-pedido
    spec:
      containers:
        - name: fiapeats-ms-pedido-container
          image: 980921733871.dkr.ecr.us-east-1.amazonaws.com/fiapeats-ms-pedido:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /fiapeats/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /fiapeats/actuator/health
              port: 8080
            initialDelaySeconds: 105
            periodSeconds: 10

      restartPolicy: Always
