kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiapeats-ms-pedido-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fiapeatsapipedido
      http:
        paths:
          - path: /fiapeats
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-fiapeats-service
                port:
                  number: 8080
